--- a/src/styles/Form.module.scss
+++ b/src/styles/Form.module.scss
@@ -1,5 +1,5 @@
 .formWrapper {
-  @apply container flex flex-col items-center justify-center h-screen px-5 mx-auto;
+  @apply container flex flex-col items-center justify-center px-5 mx-auto;
 
   .formInnerWrapper {
     @apply w-full max-w-xs gap-4 flex flex-col;
